[metadata]
name = compileall2
version = 0.7.2
description = Enhanced Python `compileall` module
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/fedora-python/compileall2
author = Lumír Balhar
author_email = frenzy.madness@gmail.com
license = PSFv2
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Python Software Foundation License
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Compilers

[options]
py_modules =
    compileall2

[options.entry_points]
console_scripts =
    compileall2 = compileall2:main
